fix time spacing

--- a/src/platform-apps/channels/styles.scss
+++ b/src/platform-apps/channels/styles.scss
@@ -363,6 +363,8 @@
         font-size: 12px;
         color: theme.$font-color-time;
         visibility: hidden;
+        padding-top: 5px;
+        padding-right: 27px;
       }
 
       &__left {
